force-app/main/default/objects/Subscriber__c/Subscriber__c.object-meta.xml
<CustomObject>
    <description>To capture details of individuals (contacts not related to any accounts) for use with Marketing Cloud</description>
    <label>Subscriber</label>
    <nameField>
        <displayFormat>SUB-{000000}</displayFormat>
        <label>Subscriber Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Subscribers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>