force-app/main/default/objects/Subscriber__c/fields/Active_Recreation__c.field-meta.xml
<CustomField>
    <fullName>Active_Recreation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active Recreation</label>
    <type>Checkbox</type>
</CustomField>