force-app/main/default/objects/Subscriber__c/fields/Athlete_Life_Db__c.field-meta.xml
<CustomField>
    <fullName>Athlete_Life_Db__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Athlete Life Db</label>
    <type>Checkbox</type>
</CustomField>