force-app/main/default/objects/Subscriber__c/fields/Balance_is_Better__c.field-meta.xml
<CustomField>
    <fullName>Balance_is_Better__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Balance is Better</label>
    <type>Checkbox</type>
</CustomField>