force-app/main/default/objects/Subscriber__c/fields/Carded_Athlete_Db__c.field-meta.xml
<CustomField>
    <fullName>Carded_Athlete_Db__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Carded Athlete Db</label>
    <type>Checkbox</type>
</CustomField>