force-app/main/default/objects/Subscriber__c/fields/Click_Location__c.field-meta.xml
<CustomField>
    <fullName>Click_Location__c</fullName>
    <label>Click Location</label>
    <length>200</length>
    <type>Text</type>
</CustomField>