force-app/main/default/objects/Subscriber__c/fields/Coach_Db__c.field-meta.xml
<CustomField>
    <fullName>Coach_Db__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Coach Db</label>
    <type>Checkbox</type>
</CustomField>