force-app/main/default/objects/Subscriber__c/fields/Disability_Sector_News__c.field-meta.xml
<CustomField>
    <fullName>Disability_Sector_News__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disability Sector News</label>
    <type>Checkbox</type>
</CustomField>