force-app/main/default/objects/Subscriber__c/fields/Do_you_identify_as_Maori__c.field-meta.xml
<CustomField>
    <fullName>Do_you_identify_as_Maori__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do you identify as Maori?</label>
    <type>Checkbox</type>
</CustomField>