force-app/main/default/objects/Subscriber__c/fields/General_Db__c.field-meta.xml
<CustomField>
    <fullName>General_Db__c</fullName>
    <defaultValue>false</defaultValue>
    <label>General Db</label>
    <type>Checkbox</type>
</CustomField>