force-app/main/default/objects/Subscriber__c/fields/General_Media__c.field-meta.xml
<CustomField>
    <fullName>General_Media__c</fullName>
    <defaultValue>false</defaultValue>
    <label>General Media</label>
    <type>Checkbox</type>
</CustomField>