force-app/main/default/objects/Subscriber__c/fields/Healthy_Active_Quarterly__c.field-meta.xml
<CustomField>
    <fullName>Healthy_Active_Quarterly__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Healthy Active Quarterly</label>
    <type>Checkbox</type>
</CustomField>