force-app/main/default/objects/Subscriber__c/fields/HiddenTag__c.field-meta.xml
<CustomField>
    <fullName>HiddenTag__c</fullName>
    <label>HiddenTag</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>