force-app/main/default/objects/Subscriber__c/fields/High_Performance_Sport_New_Zealand__c.field-meta.xml
<CustomField>
    <fullName>High_Performance_Sport_New_Zealand__c</fullName>
    <defaultValue>false</defaultValue>
    <label>High Performance Sport New Zealand</label>
    <type>Checkbox</type>
</CustomField>