force-app/main/default/objects/Subscriber__c/fields/HP_Woman_Feedback__c.field-meta.xml
<CustomField>
    <fullName>HP_Woman_Feedback__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HP Woman Feedback</label>
    <type>Checkbox</type>
</CustomField>