force-app/main/default/objects/Subscriber__c/fields/Integrity__c.field-meta.xml
<CustomField>
    <fullName>Integrity__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This check box will be checked if user is filling form for Integrity subscription</description>
    <label>Integrity</label>
    <type>Checkbox</type>
</CustomField>