force-app/main/default/objects/Subscriber__c/fields/iseGuide__c.field-meta.xml
<CustomField>
    <fullName>iseGuide__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To check if subscriber has requested for eguide.</description>
    <label>iseGuide</label>
    <type>Checkbox</type>
</CustomField>