force-app/main/default/objects/Subscriber__c/fields/Kaupapa_Maori_News__c.field-meta.xml
<CustomField>
    <fullName>Kaupapa_Maori_News__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Kaupapa Maori News</label>
    <type>Checkbox</type>
</CustomField>