force-app/main/default/objects/Subscriber__c/fields/Ko_wai_koe__c.field-meta.xml
<CustomField>
    <fullName>Ko_wai_koe__c</fullName>
    <label>Ko wai koe</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Marae</fullName>
            </value>
            <value>
                <fullName>School/Kura</fullName>
            </value>
            <value>
                <fullName>Rangatahi</fullName>
            </value>
            <value>
                <fullName>Researcher</fullName>
            </value>
            <value>
                <fullName>Individual</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>