force-app/main/default/objects/Subscriber__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <label>Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Northland</fullName>
            </value>
            <value>
                <fullName>North Harbour</fullName>
            </value>
            <value>
                <fullName>Auckland</fullName>
            </value>
            <value>
                <fullName>Waitakere</fullName>
            </value>
            <value>
                <fullName>Counties Manakau</fullName>
                <label>Counties Manukau</label>
            </value>
            <value>
                <fullName>Waikato</fullName>
            </value>
            <value>
                <fullName>Bay of Plenty</fullName>
            </value>
            <value>
                <fullName>Gisborne</fullName>
            </value>
            <value>
                <fullName>Hawkes Bay</fullName>
            </value>
            <value>
                <fullName>Taranaki</fullName>
            </value>
            <value>
                <fullName>Whanganui</fullName>
            </value>
            <value>
                <fullName>Manawatu</fullName>
            </value>
            <value>
                <fullName>Wellington</fullName>
            </value>
            <value>
                <fullName>Tasman</fullName>
            </value>
            <value>
                <fullName>Canterbury/West Coast</fullName>
            </value>
            <value>
                <fullName>Otago</fullName>
            </value>
            <value>
                <fullName>Southland</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>