force-app/main/default/objects/Subscriber__c/fields/Monthly__c.field-meta.xml
<CustomField>
    <fullName>Monthly__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Monthly</label>
    <type>Checkbox</type>
</CustomField>