force-app/main/default/objects/Subscriber__c/fields/NSO_Marcomms_Db__c.field-meta.xml
<CustomField>
    <fullName>NSO_Marcomms_Db__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NSO Marcomms Db</label>
    <type>Checkbox</type>
</CustomField>