force-app/main/default/objects/Subscriber__c/fields/NZ_Coach__c.field-meta.xml
<CustomField>
    <fullName>NZ_Coach__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NZ Coach</label>
    <type>Checkbox</type>
</CustomField>