force-app/main/default/objects/Subscriber__c/fields/Partner_Type__c.field-meta.xml
<CustomField>
    <fullName>Partner_Type__c</fullName>
    <label>Partner Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>National Sporting Organisation</fullName>
            </value>
            <value>
                <fullName>National Recreation Organisation</fullName>
            </value>
            <value>
                <fullName>Territorial Authority</fullName>
            </value>
            <value>
                <fullName>Regional Sports Trust</fullName>
            </value>
            <value>
                <fullName>Education</fullName>
            </value>
            <value>
                <fullName>Government</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>