force-app/main/default/objects/Subscriber__c/fields/Placebo_Db__c.field-meta.xml
<CustomField>
    <fullName>Placebo_Db__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Placebo Db</label>
    <type>Checkbox</type>
</CustomField>