force-app/main/default/objects/Subscriber__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Coach</fullName>
            </value>
            <value>
                <fullName>Athlete</fullName>
            </value>
            <value>
                <fullName>Parent/Guardian</fullName>
            </value>
            <value>
                <fullName>Sport Leader/Administrator</fullName>
            </value>
            <value>
                <fullName>Volunteer</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Rangatahi</fullName>
            </value>
            <value>
                <fullName>Teacher</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>