force-app/main/default/objects/Subscriber__c/fields/Sector_Update__c.field-meta.xml
<CustomField>
    <fullName>Sector_Update__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sector Update</label>
    <type>Checkbox</type>
</CustomField>