force-app/main/default/objects/Subscriber__c/fields/Signup_Type__c.field-meta.xml
<CustomField>
    <fullName>Signup_Type__c</fullName>
    <label>Signup Type</label>
    <length>200</length>
    <type>Text</type>
</CustomField>