force-app/main/default/objects/Subscriber__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sport NZ</fullName>
            </value>
            <value>
                <fullName>HPSNZ</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
            <value>
                <fullName>Normal</fullName>
                <isActive>false</isActive>
                <label>Normal</label>
            </value>
            <value>
                <fullName>Prem</fullName>
                <isActive>false</isActive>
                <label>Prem</label>
            </value>
            <value>
                <fullName>Std</fullName>
                <isActive>false</isActive>
                <label>Std</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>