force-app/main/default/objects/Subscriber__c/fields/Weekly__c.field-meta.xml
<CustomField>
    <fullName>Weekly__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Weekly</label>
    <type>Checkbox</type>
</CustomField>