force-app/main/default/objects/Subscriber__c/fields/Woman_in_Sport_Db__c.field-meta.xml
<CustomField>
    <fullName>Woman_in_Sport_Db__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Woman in Sport Db</label>
    <type>Checkbox</type>
</CustomField>