force-app/main/default/objects/Subscriber__c/fields/Youth_sport_options__c.field-meta.xml
<CustomField>
    <fullName>Youth_sport_options__c</fullName>
    <label>Youth sport options</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>I am a coach</fullName>
            </value>
            <value>
                <fullName>I am a teacher</fullName>
            </value>
            <value>
                <fullName>I am the parent/guardian of a participant</fullName>
            </value>
            <value>
                <fullName>I am a youth sport administrator</fullName>
            </value>
            <value>
                <fullName>I am a volunteer</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>