force-app/main/default/objects/Subscriber__c/fields/youthoption__c.field-meta.xml
<CustomField>
    <fullName>youthoption__c</fullName>
    <label>youthoption</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>