force-app/main/default/objects/Subscriber__c/recordTypes/High_Performance_Sport_NZ.recordType-meta.xml
<RecordType>
    <fullName>High_Performance_Sport_NZ</fullName>
    <active>true</active>
    <description>Used for contacts who subscribe to any HPSNZ publications</description>
    <label>High Performance Sport NZ</label>
</RecordType>