force-app/main/default/objects/Subscriber__c/recordTypes/Integrity.recordType-meta.xml
<RecordType>
    <fullName>Integrity</fullName>
    <active>true</active>
    <description>This record type will have records registered for Integrity list</description>
    <label>Integrity</label>
</RecordType>