force-app/main/default/objects/Subscriber__c/recordTypes/Media.recordType-meta.xml
<RecordType>
    <fullName>Media</fullName>
    <active>true</active>
    <description>Used for contacts who subscribed to the Media Release publication</description>
    <label>Media</label>
</RecordType>