force-app/main/default/objects/Subscriber__c/recordTypes/Public.recordType-meta.xml
<RecordType>
    <fullName>Public</fullName>
    <active>true</active>
    <description>Used for contacts who subscribe for public publications via webform</description>
    <label>Public</label>
</RecordType>