force-app/main/default/objects/Subscriber__c/recordTypes/Sport_NZ_Staff.recordType-meta.xml
<RecordType>
    <fullName>Sport_NZ_Staff</fullName>
    <active>true</active>
    <description>Used for Sport NZ staff who are sent staff updates from Marketing Cloud</description>
    <label>Sport NZ Staff</label>
</RecordType>