force-app/main/default/objects/Subscriber__c/listViews/HPSNZ_Subscribers.listView-meta.xml
<ListView>
    <fullName>HPSNZ_Subscribers</fullName>
    <columns>NAME</columns>
    <columns>First_Name__c</columns>
    <columns>Last_Name__c</columns>
    <columns>Email_Address__c</columns>
    <columns>General_Db__c</columns>
    <columns>Woman_in_Sport_Db__c</columns>
    <columns>Athlete_Life_Db__c</columns>
    <columns>Carded_Athlete_Db__c</columns>
    <columns>Coach_Db__c</columns>
    <columns>NSO_Marcomms_Db__c</columns>
    <columns>HP_Woman_Feedback__c</columns>
    <columns>Placebo_Db__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Subscriber__c.High_Performance_Sport_NZ</value>
    </filters>
    <label>HPSNZ Subscribers</label>
</ListView>