force-app/main/default/objects/Subscriber__c/listViews/Integrity_Subscriber.listView-meta.xml
<ListView>
    <fullName>Integrity_Subscriber</fullName>
    <columns>NAME</columns>
    <columns>First_Name__c</columns>
    <columns>Last_Name__c</columns>
    <columns>Email_Address__c</columns>
    <columns>Integrity__c</columns>
    <columns>Role__c</columns>
    <columns>Location__c</columns>
    <columns>Organisation__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Integrity__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Integrity Subscriber</label>
</ListView>