force-app/main/default/objects/Subscriber__c/listViews/Media_General_Subscribers.listView-meta.xml
<ListView>
    <fullName>Media_General_Subscribers</fullName>
    <columns>NAME</columns>
    <columns>First_Name__c</columns>
    <columns>Last_Name__c</columns>
    <columns>Email_Address__c</columns>
    <columns>Organisation__c</columns>
    <columns>Subscribed__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Subscriber__c.Media</value>
    </filters>
    <filters>
        <field>General_Media__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Media (General) Subscribers</label>
</ListView>