force-app/main/default/objects/Subscriber__c/listViews/Sport_NZ_Staff.listView-meta.xml
<ListView>
    <fullName>Sport_NZ_Staff</fullName>
    <columns>NAME</columns>
    <columns>First_Name__c</columns>
    <columns>Last_Name__c</columns>
    <columns>Email_Address__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Subscriber__c.Sport_NZ_Staff</value>
    </filters>
    <label>Sport NZ Staff</label>
</ListView>